--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - "packages/container/**"
+      - ".github/**"
 
 defaults:
   run:
@@ -19,7 +20,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 17
       - run: npm install
       - run: npm run build
 
