--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 17
+      - run: npm config set legacy-peer-deps true
       - run: npm install
       - run: npm run build
 
