--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -23,9 +23,10 @@
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
+    "file-loader": "6.2.0",
     "html-webpack-plugin": "5.6.3",
     "style-loader": "4.0.0",
-    "webpack": "^5.95.0",
+    "webpack": "5.95.0",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.1.0",
     "webpack-merge": "5.2.0"
