auth app and some routings

--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -2,7 +2,7 @@
   "name": "marketing",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js",
+    "start": "webpack serve --config config/webpack.dev.js --client-logging verbose",
     "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
