--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,8 +6,10 @@
     "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.0",
-    "@material-ui/icons": "4.9.1",
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@mui/material": "6.1.5",
+    "@mui/styles": "6.1.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0"
@@ -17,14 +19,16 @@
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.1",
+    "@webpack-cli/serve": "2.0.5",
     "babel-loader": "8.1.0",
     "clean-webpack-plugin": "3.0.0",
     "css-loader": "5.0.0",
-    "html-webpack-plugin": "4.5.0",
-    "style-loader": "2.0.0",
-    "webpack": "5.4.0",
-    "webpack-cli": "4.1.0",
-    "webpack-dev-server": "3.11.0",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.6.3",
+    "style-loader": "4.0.0",
+    "webpack": "5.95.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.1.0",
     "webpack-merge": "5.2.0"
   }
 }
